@@ -3,6 +3,8 @@ SUMMARY OF NEW FEATURES AND BUG FIXES SINCE V4.0
 ============================================================================
 
 Version 6.7.2 - not yet released
+* user interface
+  - fix crash in alternates list (#3146)
 
 Version 6.7.1 - 2013/10/11
 * replay
